# GalleryAnimation

./: CMakeLists.txt  README.md  Stars.tga  amesWindow.cpp  loadTGA.h  userInteraction.cpp
